@@ -1,3 +1,6 @@
+May 10, 2022
+  tuned up logging
+
 2022-03-07
   updated dependencies
 
